--- a/datavis/dashboard/templates/index.html
+++ b/datavis/dashboard/templates/index.html
@@ -3,7 +3,7 @@
 <!doctype html>
 <html lang="pt-br" data-bs-theme="auto">
   <head>
-    <script src="{% static '../assets/js/color-modes.js' %}"></script>
+    <!--<script src="{% static '../assets/js/color-modes.js' %}"></script>-->
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -300,15 +300,17 @@
               <td>text</td>
             </tr>
           </tbody>
-
         </table>
       </div>
     </main>
   </div> 
 </div>
 
+
+
       <script>
         const dt = {{dt2}}
+        const nm = {{nm2}}
       </script>
 
 
